fix(ui): vertical alignment for ordered list marker with bullet marker

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -531,7 +531,7 @@
   }
 
   &.as-order-list {
-    @apply w-[28px] whitespace-nowrap justify-start;
+    @apply w-[28px] whitespace-nowrap justify-start pl-[4px];
   }
 
   .bullet {
